# fairpay

./: Anchor.toml  README.md  package-lock.json  package.json  tsconfig.json
app/: README.md  eslint.config.mjs  middleware.ts  next.config.mjs  package-lock.json  package.json  resolver.json
app/data/: jobs.json
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/all-jobs/: page.tsx
app/src/app/api/auth/login/: route.ts
app/src/app/api/auth/logout/: route.ts
app/src/app/api/auth/session/: route.ts
app/src/app/api/jobs/: route.ts
app/src/app/api/resolve-dispute/: route.ts
app/src/app/api/verify-completion/: route.ts
app/src/app/job/[escrow_address]/: page.tsx
app/src/app/jobs/: page.tsx
app/src/app/login/: page.tsx
app/src/app/post-job/: page.tsx
app/src/components/: AuthButton.tsx  DisputePanel.tsx  JobCard.tsx  WalletButton.tsx  providers.tsx
app/src/lib/: auth.ts  constants.ts  idl.ts  jobHistory.ts  program.ts
app/src/lib/server/: jobStore.ts  session.ts
app/src/types/: escrow.ts
migrations/: deploy.ts
programs/fairpay/: Cargo.toml
programs/fairpay/src/: lib.rs
tests/: fairpay.ts
