[package]
name = "fairpay"
version = "0.1.0"
description = "FairPay escrow program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fairpay"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"